# TZcup

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CODEX_MASTER_PROMPT.md  COMPETITION_REQUIREMENTS.md  ENGINEERING_WAIVER_STAGE5BR6W.md  EVALUATION_PLAN.md  GPT_REVIEW_STAGE4.md  GPT_REVIEW_STAGE4R.md  GPT_REVIEW_STAGE4S.md  GPT_REVIEW_STAGE4T.md  GPT_REVIEW_STAGE4U.md  GPT_REVIEW_STAGE4V.md  GPT_REVIEW_STAGE4W.md  GPT_REVIEW_STAGE5A.md  GPT_REVIEW_STAGE5B.md  GPT_REVIEW_STAGE5BR.md  GPT_REVIEW_STAGE5BR2.md  GPT_REVIEW_STAGE5BR3.md  GPT_REVIEW_STAGE5BR4.md  GPT_REVIEW_STAGE5BR5.md  GPT_REVIEW_STAGE5BR6.md  GPT_REVIEW_STAGE5BR6W.md  MANIFEST.json  PACKAGE_README_STAGE4R.md  PROJECT_SPEC.md  README.md  README_FIRST.md  STAGE_GATES.md  THIRD_PARTY_SELECTION.md  无人清扫车仿真_GPT复核包_Stage4R_20260715.zip.sha256
starter_ws/src/sanitation_bringup/: CMakeLists.txt  package.xml
starter_ws/src/sanitation_bringup/config/: ekf_a_wheel_vx_imu_vyaw.yaml  ekf_b_wheel_vx_imu_yaw_vyaw.yaml  ekf_c_current_wheel_twist_imu_vyaw.yaml  ekf_d_wheel_vx_vyaw_no_imu.yaml  selected_ekf.yaml
starter_ws/src/sanitation_bringup/launch/: motion_calibration.launch.py  sim.launch.py  stage4v_localization.launch.py  stage5br3_g2_capture.launch.py
starter_ws/src/sanitation_coverage/: package.xml  setup.cfg  setup.py
starter_ws/src/sanitation_coverage/config/: coverage.yaml
starter_ws/src/sanitation_coverage/launch/: coverage.launch.py
starter_ws/src/sanitation_coverage/sanitation_coverage/: coverage_probe.py  metrics.py  mission_geometry.py  route_entry.py
starter_ws/src/sanitation_coverage/test/: test_metrics.py  test_stage4w_geometry.py
starter_ws/src/sanitation_gnss_sim/: package.xml  setup.cfg  setup.py
starter_ws/src/sanitation_gnss_sim/config/: profiles.yaml
starter_ws/src/sanitation_gnss_sim/launch/: gnss_sim.launch.py
starter_ws/src/sanitation_gnss_sim/sanitation_gnss_sim/: __init__.py  model.py  node.py
starter_ws/src/sanitation_gnss_sim/test/: test_model.py
starter_ws/src/sanitation_ground_truth/: package.xml  setup.cfg  setup.py
starter_ws/src/sanitation_ground_truth/config/: stage5a_scene.yaml
starter_ws/src/sanitation_ground_truth/resource/: sanitation_ground_truth
starter_ws/src/sanitation_ground_truth/sanitation_ground_truth/: __init__.py  node.py  visibility.py
starter_ws/src/sanitation_ground_truth/test/: test_visibility.py
starter_ws/src/sanitation_learning/: package.xml  setup.cfg  setup.py
starter_ws/src/sanitation_learning/config/: asset_registry.yaml  perception_evaluability_policy.yaml  perception_evaluability_policy_v2.yaml  perception_evaluability_policy_v2_engineering.yaml  stage5br2_g2_screening.yaml  stage5br3_g2_screening.yaml  stage5br4_active_perception.yaml  stage5br_audit.yaml  stage5br_g1_training.yaml
starter_ws/src/sanitation_learning/resource/: sanitation_learning
starter_ws/src/sanitation_learning/sanitation_learning/: __init__.py  assets.py  camera_mechanics.py  cli.py  evaluation.py  g1_collector.py  g1_finalize.py  g1_randomize.py  g1_training.py  g2_capture.py  g2_contract.py  g2_metrics.py  g2_runtime_contract.py  g2_scene.py  gazebo_g1.py  gazebo_g2.py  human_review_handoff.py  j6_preflight.py  models.py  observability.py  rendered.py  stage5br_audit.py
starter_ws/src/sanitation_learning/test/: test_assets.py  test_camera_mechanics.py  test_g1_collector.py  test_g2_contract.py  test_g2_metrics.py  test_gazebo_g1.py  test_gazebo_g2.py  test_observability.py  test_rendered.py
starter_ws/src/sanitation_navigation/: CMakeLists.txt  package.xml
starter_ws/src/sanitation_navigation/config/: nav2.yaml  slam.yaml  slam_002.yaml  slam_localization.yaml  stage5br6w_v4_candidate_footprint.yaml
starter_ws/src/sanitation_navigation/launch/: navigation.launch.py  slam.launch.py
starter_ws/src/sanitation_navigation/maps/: sanitation_test_map.pgm  sanitation_test_map.yaml  stage4v_map_frame_calibration.yaml  stage4v_surveyed_reference.pgm  stage4v_surveyed_reference.yaml
starter_ws/src/sanitation_perception_interfaces/: CMakeLists.txt  package.xml
starter_ws/src/sanitation_perception_interfaces/msg/: CleaningEvent.msg  GarbageTarget.msg  GarbageTargetArray.msg
starter_ws/src/sanitation_safety/: package.xml  setup.cfg  setup.py
starter_ws/src/sanitation_safety/config/: operational_envelopes.yaml
starter_ws/src/sanitation_safety/sanitation_safety/: velocity_gate.py
starter_ws/src/sanitation_safety/test/: test_velocity_gate.py
starter_ws/src/sanitation_scan_refiner/: CMakeLists.txt  package.xml
starter_ws/src/sanitation_scan_refiner/config/: stage4v_hybrid.yaml
starter_ws/src/sanitation_scan_refiner/launch/: hybrid_localization.launch.py
starter_ws/src/sanitation_scan_refiner/src/: hybrid_global_fuser_node.cpp  scan_refiner_core.cpp  scan_refiner_node.cpp
starter_ws/src/sanitation_scan_refiner/test/: test_scan_refiner_core.cpp
starter_ws/src/sanitation_spot_cleaning/: package.xml  setup.cfg  setup.py
starter_ws/src/sanitation_spot_cleaning/config/: spot_cleaning.yaml  stage5br6w_v4_engineering.yaml
starter_ws/src/sanitation_spot_cleaning/resource/: sanitation_spot_cleaning
starter_ws/src/sanitation_spot_cleaning/sanitation_spot_cleaning/: __init__.py  active_observation.py  coordinator.py  evaluator.py  node.py  observation_pose_node.py  observation_pose_planner.py
starter_ws/src/sanitation_spot_cleaning/test/: test_active_observation.py  test_coordinator.py  test_observation_pose_planner.py  test_stage5br6w_engineering.py
starter_ws/src/sanitation_tasks/: package.xml  setup.cfg  setup.py
starter_ws/src/sanitation_tasks/config/: demo_area.yaml  localization_route.json  mapping_completion_route.json  measurement_covariance.yaml  mission_schema.json
starter_ws/src/sanitation_tasks/sanitation_tasks/: covariance_audit.py  dynamic_geometry.py  dynamic_obstacle_probe.py  evaluation.py  filter_probe.py  ground_truth_adapter.py  ground_truth_identity_probe.py  (+19 more)
starter_ws/src/sanitation_vehicle_description/: CMakeLists.txt  package.xml
starter_ws/src/sanitation_worlds/: CMakeLists.txt  package.xml
(+923 files in other folders)
