<?xml version="1.0"?>
<package format="3">
  <name>sanitation_bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration package for sanitation vehicle simulation.</description>
  <maintainer email="team@example.com">Sanitation Vehicle Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>linorobot2_base</exec_depend>
  <exec_depend>linorobot2_gazebo</exec_depend>
  <exec_depend>sanitation_vehicle_description</exec_depend>
  <exec_depend>sanitation_worlds</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
