<?xml version="1.0"?>
<package format="3">
  <name>sanitation_ground_truth</name>
  <version>0.1.0</version>
  <description>Gazebo semantic truth annotations for Stage5A evaluation and dataset generation.</description>
  <maintainer email="team@example.com">Sanitation Vehicle Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sanitation_perception</exec_depend>
  <exec_depend>sanitation_perception_interfaces</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <test_depend>python3-pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
