<?xml version="1.0"?>
<package format="3">
  <name>sanitation_learning</name>
  <version>0.1.0</version>
  <description>Stage5B leakage-safe rendered data, learned perception, and deployment preflight.</description>
  <maintainer email="team@example.com">Sanitation Vehicle Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>sanitation_perception</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <test_depend>python3-pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
