<?xml version="1.0"?>
<package format="3">
  <name>sanitation_navigation</name>
  <version>0.1.0</version>
  <description>SLAM, localization, Nav2, costmap filters, and maps for the sanitation vehicle.</description>
  <maintainer email="team@example.com">Sanitation Vehicle Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>sanitation_safety</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
