<?xml version="1.0"?>
<package format="3">
  <name>sanitation_spot_cleaning</name>
  <version>0.1.0</version>
  <description>Perception-driven deferred spot-cleaning queue and Stage5A E2E evaluator.</description>
  <maintainer email="team@example.com">Sanitation Vehicle Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sanitation_dataset</exec_depend>
  <exec_depend>sanitation_perception</exec_depend>
  <exec_depend>sanitation_perception_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <test_depend>python3-pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
