<?xml version="1.0"?>
<package format="3">
  <name>sanitation_worlds</name>
  <version>0.1.0</version>
  <description>Offline Gazebo worlds for sanitation vehicle simulation.</description>
  <maintainer email="team@example.com">Sanitation Vehicle Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
